# noveltrans

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: feature.md  plan.md  ship.md
changes/001-NOVEL-TRANSLATOR-GUI/: 001.00-PROMPT.md  001.01-HISTORY.md  001.02-INITIAL-PLAN.md
changes/002-TTS-AUDIO-EXPORT/: 002.00-PROMPT.md  002.01-HISTORY.md  002.02-INITIAL-PLAN.md
changes/003-MEDOCTRUYEN-SOURCE/: 003.00-PROMPT.md  003.01-HISTORY.md  003.02-INITIAL-PLAN.md
changes/004-DISCORD-AUTOUNLOCK/: 004.00-PROMPT.md  004.01-HISTORY.md
changes/005-DISCORD-UNLOCK-COMPOSER-HYGIENE/: 005.01-HISTORY.md
changes/006-GIATOCVUONGTAI-SOURCE/: 006.00-PROMPT.md  006.01-HISTORY.md  006.02-INITIAL-PLAN.md
changes/007-MULTIPLE-WINDOWS/: 007.00-PROMPT.md  007.01-HISTORY.md  007.02-INITIAL-PLAN.md
changes/008-EXPORT-CHAPTER-NUMBERING/: 008.00-PROMPT.md  008.01-HISTORY.md  (+1 more)
packaging/: NovelTrans.icns  NovelTrans.spec  launcher.py  make_icon.py
scripts/: capture_69shuba.py  diag_medoctruyen.py
tests/: conftest.py  test_cf_browser.py  test_discord_unlock.py  test_exporters.py  test_find_replace.py  test_find_replace_dialog.py  test_keep_awake.py  test_main_window.py  test_merge.py  test_names.py  test_runtime_env.py  test_scrapers_giatocvuongtai.py  test_scrapers_ixdzs.py  test_scrapers_medoctruyen.py  test_scrapers_shuba69.py  test_scrapers_webtruyendich.py  test_scrapers_xbanxia.py  test_settings_dialog.py  test_state.py  test_storage.py  test_tab_audio_preview.py  test_tab_scrape.py  test_tab_translate_find_replace.py  test_tab_video.py  test_tags.py  test_thumbnail.py  test_thumbnail_editor.py  test_translators.py  test_tts.py  test_tts_clean.py  test_video.py  test_video_metadata.py  test_widgets.py  test_workers_adapter_close.py  test_workers_identity.py
(+150 files in other folders)
